# kurshok.space

./: .gitignore  .stignore  Cargo.toml  README.md  run.sh
assets/: robots.txt
assets/css/: admin.css  admin.min.css  auth.css  auth.min.css  main.css  main.min.css  marx.css  marx.min.css  minify-all.py  postauth.css  postauth.min.css  site.css  site.min.css  style.css  style.min.css
assets/css/fontello/: LICENSE.txt  config.json  demo.html
assets/css/fontello/css/: animation.min.css  fontello-codes.css  fontello-codes.min.css  fontello-embedded.css  fontello-embedded.min.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css  fontello.min.css
assets/css/fontello/font/: fontello.eot
assets/js/: admin.js  admin.min.js  admin.min.js.map  auth.js  auth.min.js  auth.min.js.map  autominify.sh  comments.js  comments.min.js  comments.min.js.map  domlib.js  domlib.min.js  domlib.min.js.map  lazy-simon.js  lazy-simon.min.js  lazy-simon.min.js.map  main.js  main.min.js  main.min.js.map  profile.js  profile.min.js  profile.min.js.map  router.js  router.min.js  router.min.js.map  scroller.js  scroller.min.js  scroller.min.js.map  site.js  site.min.js  site.min.js.map  view.js  view.min.js  view.min.js.map  writ-writer.js  writ-writer.min.js  writ-writer.min.js.map
scripts/: index.js  minify-css-despite-syncthing.py  minify-css.py  minify-js-despite-syncthing.py  minify-js.py  package-lock.json  package.json
src/: admin_functions.rs  auth.rs  comments.rs  email.rs  expirable_data.rs  main.rs  orchestrator.rs  posts.rs  ratelimiter.rs  responses.rs  utils.rs  websockets.rs  writs.rs
templates/: 404.html  admin-do-ddns.js  admin-gateway.html  admin.html  books.html  footer.html  grim-service-worker.js  head-imports.html  index.html  magic-link-email-text-version.txt  magic-link-email.html  magic-link-verification-page.html  old-index.html  post.html  privacy-policy.html  whats-in-the-name.html
