[package]
authors = ["Saul van der Walt <saul@kurshok.space>"]
edition = "2018"
name = "kurshok-space"
version = "0.1.1"

[dependencies]
# actix-files = { git = "https://github.com/SaulDoesCode/actix-web" }
# actix-web = { git = "https://github.com/SaulDoesCode/actix-web", features = ["rustls"] }
actix-web = { version = "^3", features = ["rustls"]}
actix-files = "^0"
bincode = "^1.3"
borsh = "^0"
clap = "3.0.0-beta.2"
comrak = {version = "^0", default-features = false}
crossbeam-channel = "^0"
derive_more = "*"
itertools = "*"
lazy_static = "^1"
parking_lot = "*"
rand = {version = "^0.8", features = ["nightly", "simd_support"]}
rayon = "^1"
regex = {version = "^1"}
rustls = "^0.18"
lettre = {version = "0.10.0-alpha.4", features = ["builder", "smtp-transport", "rustls-tls"], default-features = false}
notify = "^5.0.0-pre.4"
syn = "1.0.57"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
sled = {version = "^0.34", features = ["compression", "rio"]}
slug = "^0.1.4"
sthash = {git = "https://github.com/SaulDoesCode/rust-sthash"}
tera = { version = "^1.6", features = ["builtins"] }
thiserror = "^1"
time = {version = "^0.2", features = ["serde", "rand"]}
tokio = {version = "^0.2", features = ["full"]}
toml = "^0"
walkdir = "^2"

mimalloc = {version = "*", default-features = false}

[profile.dev]
codegen-units = 16
debug = true
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = 'abort'
