[package]
authors = ["Saul van der Walt <saul@kurshok.space>"]
edition = "2018"
name = "kurshok-space"
version = "0.1.6"

[dependencies]
actix-web = { version = "4.0.0-beta.1", features = ["rustls"]}
actix-files = "0.6.0-beta.1"
actix-web-actors = "4.0.0-beta.1"
actix = "0.11.0-beta.1"
actix-rt = "=2.0.0-beta.2"
actix-service = "=2.0.0-beta.3"
bincode = "^1.3"
borsh = { version = "0.8.1", features = ["std"]}
clap = "3.0.0-beta.2"
comrak = {version = "^0", default-features = false}
dashmap = {version = "  ^4", features = ["rayon"]}
derive_more = "*"
futures = "*"
itertools = "*"
parking_lot = { version = "*", features = ["nightly"]}
rand = {version = "^0.8", features = ["nightly", "simd_support"]}
rayon = "^1"
regex = {version = "^1", features = ["aho-corasick"]}
rustls = "0.19.0"
lettre = {git = "https://github.com/lettre/lettre", branch = "master", features = ["builder", "smtp-transport", "rustls-tls"], default-features = false}
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
sled = {version = "^0.34", features = ["compression", "rio"]}
slug = "^0.1.4"
sthash = {git = "https://github.com/SaulDoesCode/rust-sthash"}
tera = { version = "^1.6", default-features = false }
thiserror = "^1"
time = {version = "^0.2", default-features = false}
tokio = {version = "^1", features = ["sync", "parking_lot"], default-features = false}
toml = "^0"

mimalloc = {version = "*", default-features = false}

[profile.dev]
codegen-units = 16
debug = true
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = 'abort'
